[gd_scene load_steps=7 format=2]

[ext_resource path="res://singletons/AudioManager.gd" type="Script" id=1]
[ext_resource path="res://sfx/swish-1.wav" type="AudioStream" id=2]
[ext_resource path="res://sfx/ambience/birdchirpingplaceholder.wav" type="AudioStream" id=3]
[ext_resource path="res://music/placeholder_music.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/warn_sound.ogg" type="AudioStream" id=5]
[ext_resource path="res://music/Rocken.ogg" type="AudioStream" id=6]

[node name="AudioManager" type="Node2D"]
script = ExtResource( 1 )

[node name="PlaceHolderMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -2.0

[node name="RockenMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -2.0

[node name="Swish" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="BirdChirps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Warning" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
